<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportIncident"
    android:background="@color/LavenderBlush">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="HR Incident Reporting"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/txtId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/id"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/edtId"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_marginRight="20dp"/>
            </TableRow>
            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/txtIncidentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/incident_date"
                    android:textSize="15sp"  />
                <EditText
                    android:id="@+id/edtIncidentDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="date"
                    android:layout_marginRight="20dp"/>
            </TableRow>
            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtEmployeeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/employee_number"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/edtEmployeeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:layout_marginRight="20dp"/>
            </TableRow>
            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtEmployeeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/employee_name"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/edtEmployeeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:inputType="text"/>
            </TableRow>
            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/gender"
                    android:textSize="15sp" />

                <!-- RadioGroup for Credits -->
                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1">

                    <!-- radio button for credit =2 -->
                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />

                    <!-- radio button for credit =3 -->
                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Female" />
                </RadioGroup>

            </TableRow>
            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtShift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/shift"
                    android:textSize="15sp" />

                <Spinner android:id="@+id/spinnerShift"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="120dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtDepartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/department"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/edtDepartment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:inputType="text"/>
            </TableRow>

            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/position"
                    android:textSize="15sp"/>
                <EditText
                    android:id="@+id/edtPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:inputType="text"/>
            </TableRow>

            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtIncidentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="Incident Type"
                    android:textSize="15sp"/>
                <Spinner android:id="@+id/spinnerIncidentType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="120dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_marginTop="8dp">
                <TextView
                    android:id="@+id/txtInjuredPart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:text="@string/injured_body_part"
                    android:textSize="15sp"/>
                <Spinner android:id="@+id/spinnerInjuredBodypart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="120dp"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow android:layout_marginTop="25dp">
                <Button
                    android:id="@+id/btnOrder"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/report_incident"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
            </TableRow>

            <TableRow android:layout_marginTop="25dp">

                <Button
                    android:id="@+id/btn_ViewData"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="View Emp Data"
                    android:textColor="@android:color/white" />
            </TableRow>



        </TableLayout>


    </RelativeLayout>

</FrameLayout>